# banana-lib

./: Cargo.toml  deny.toml  rustfmt.toml
.github/workflows/: ci.yml  dependencies.yml  release.yml  validation-jobs.yml
banana-commons/: Cargo.toml
banana-commons/src/: lib.rs
banana-direction/: Cargo.toml
banana-direction/src/: bitmap.rs  cardinal.rs  direction.rs  iter.rs  lib.rs  ordinal.rs  table.rs
banana-geometry/: Cargo.toml
banana-geometry/src/: coord.rs  distance.rs  lib.rs  rect.rs  size.rs
banana-geometry/src/shapes/: mod.rs
banana-geometry/src/shapes/rect/: arithmitic.rs  iter.rs  mod.rs
banana-grid/: Cargo.toml
banana-grid/src/: axis.rs  grid_like.rs  grid_point.rs  lib.rs  size_2d.rs
banana-grid/src/grid_point/: iter.rs  mod.rs
banana-grid/src/grids/: grid.rs  grid_2d.rs  mod.rs
banana-utils/: Cargo.toml
banana-utils/src/: canvas.rs  lib.rs  short_names.rs
benches/: Cargo.toml
benches/benches/bananagrid/: grid.rs
src/: lib.rs
tools/ci/: Cargo.toml
tools/ci/src/: main.rs
tools/spancmp/: Cargo.toml
tools/spancmp/src/: main.rs  parse.rs  pretty.rs
