[package]
edition  = "2021"
exclude  = ["banana-geometry", "banana-grid"]
name     = "banana-lib"
resolver = "2"                                # Enables the new Cargo resolution engine
version  = "0.1.0"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

# Optimizations for WASM
[profile.release]
codegen-units = 1
lto           = true
opt-level     = 'z'
panic         = 'abort'

[workspace]
exclude = ["benches"]
members = ["banana-grid", "banana-geometry", "banana-direction"]

[features]
2d        = ["banana-grid/2d"]
bevy      = ["banana-grid/bvy"]
default   = ["banana-grid/default"]
rng       = ["banana-direction/rng"]
serialize = ["banana-geometry/serialize", "banana-grid/serialize", "banana-direction/serialize"]

[dependencies]
# locals
banana-commons   = { path = "banana-commons", version = "~0.1" }
banana-direction = { path = "banana-direction", version = "~0.1" }
banana-geometry  = { path = "banana-geometry", version = "~0.1" }
banana-grid      = { path = "banana-grid", default-features = false, version = "~0.1" }

[dev-dependencies]
criterion = { version = "0.4.0" }
plotters  = "0.3"
rand      = "0.8"

[build-dependencies]
embed-resource = "1.4"

[[bench]]
harness = false
name    = "grid"
path    = "benches/benches/bananagrid/grid.rs"
