[package]
edition = "2021"
name    = "banana-direction"
version = "0.1.0"

[features]
serialize = ["serde", "banana-grid/serialize"]

[dependencies]
banana-grid = { path = "../banana-grid" }

rand  = { version = "0.8", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
