[package]
categories  = ["direction", "cardinal", "ordinal", "bitmap"]
description = "A library for working with directions."
edition     = "2021"
keywords    = ["direction", "cardinal", "ordinal", "bitmap"]
license     = "MIT OR Apache-2.0"
name        = "banana-direction"
publish     = true
readme      = "README.md"
repository  = "https://github.com/banana-studios/banana-lib"
version     = "0.1.0"

[features]
rng       = ["rand"]
serialize = ["serde", "banana-grid/serialize"]

[dependencies]
banana-grid = { path = "../banana-grid", version = "0.1" }

rand  = { version = "0.8", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
