[package]
edition = "2021"
name    = "banana-geometry"
version = "0.1.0"

[features]
serialize = ["serde", "banana-grid/serialize"]

[dependencies]
banana-grid  = { path = "../banana-grid" }
banana-utils = { path = "../banana-utils" }

bitmask-enum = { version = "2" }
serde        = { version = "1", features = ["derive"], optional = true }
