[package]
categories  = ["game-engines", "graphics"]
description = "Geometry utilities. Rect, lines, circles, distance calculations."
edition     = "2021"
keywords    = ["geometry", "gamedev", "bresenham", "circle", "distance"]
license     = "MIT OR Apache-2.0"
name        = "banana-geometry"
publish     = true
readme      = "README.md"
repository  = "https://github.com/banana-studios/banana-lib"
version     = "0.1.0"

[features]
serialize = ["serde", "banana-grid/serialize"]

[dependencies]
banana-grid = { path = "../banana-grid", version = "0.1" }

serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
banana-utils = { path = "../banana-utils", version = "0.1" }
