[package]
edition = "2021"
name    = "banana-grid"
version = "0.1.0"

[features]
2d        = ["anyhow", "ndarray"]
bvy       = ["bevy"]
default   = ["glam"]
parallel  = ["rayon"]
serialize = ["serde", "glam/serde", "ndarray/serde"]

[dependencies]
anyhow  = { version = "1.0", optional = true }
ndarray = { version = "0.15", optional = true }

bevy  = { git = "https://github.com/bevyengine/bevy", default-features = false, optional = true }
glam  = { version = "0.22", optional = true }
rayon = { version = "1", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
