[package]
edition = "2021"
name    = "banana-grid"
version = "0.1.0"

[features]
bvy       = ["bevy"]
default   = ["glam"]
parallel  = ["rayon"]
serialize = ["serde", "glam/serde", "ndarray/serde"]

[dependencies]
anyhow  = { version = "1.0" }
ndarray = { version = "0.15" }

bevy  = { version = "0.8", default-features = false, optional = true }
glam  = { version = "0.22", optional = true }
rayon = { version = "1", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
