[package]
categories  = ["game-development", "grid", "grid2d"]
description = "A simple grid system for roguelikes"
edition     = "2021"
keywords    = ["grid", "roguelike", "game-development", "grid2d"]
license     = "MIT OR Apache-2.0"
name        = "banana-grid"
publish     = true
readme      = "README.md"
repository  = "https://github.com/banana-studios/banana-lib"
version     = "0.1.0"

[features]
bvy       = ["bevy"]
default   = ["glam"]
parallel  = ["rayon"]
serialize = ["serde", "glam/serde", "ndarray/serde"]

[dependencies]
anyhow  = { version = "1.0" }
ndarray = { version = "0.15" }

bevy  = { version = "0.9", default-features = false, optional = true }
glam  = { version = "0.22", optional = true }
rayon = { version = "1", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
