[package]
categories  = ["game-development", "internal"]
description = "A collection of utilities for banana-lib."
edition     = "2021"
license     = "MIT OR Apache-2.0"
name        = "banana-utils"
publish     = false
version     = "0.1.0"

[dependencies]
banana-grid = { path = "../banana-grid", version = "0.1" }
