[package]
description = "Benchmarks for Bevy engine"
edition     = "2021"
license     = "MIT OR Apache-2.0"
name        = "benches"
publish     = false
version     = "0.1.0"

[dev-dependencies]
criterion   = { version = "0.4.0", features = ["html_reports"] }
glam        = "0.22.0"
rand        = "0.8"
rand_chacha = "0.3"

banana-grid = { path = "../banana-grid" }

[[bench]]
harness = false
name    = "grid"
path    = "benches/bananagrid/grid.rs"
