[package]
description = "compare spans for Bevy"
edition     = "2021"
license     = "MIT OR Apache-2.0"
name        = "spancmp"
publish     = false
version     = "0.1.0"

[dependencies]
banana-utils = { path = "../../banana-utils" }
lazy_static  = "1.4"
regex        = "1.5"
serde_json   = "1.0"
termcolor    = "1.1"

clap  = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
